# bpfmeter

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml  image-on-release.yaml
bpfmeter/: Cargo.toml
bpfmeter/src/: config.rs  draw.rs  main.rs  run.rs
bpfmeter/src/exporter/: file_exporter.rs  mod.rs  prometheus_exporter.rs  prometheus_gc.rs
bpfmeter/src/meter/: cpu_meter.rs  map_meter.rs  mod.rs
bpfmeter/tests/: tests.rs
bpfmeter/tests/common/: init.rs  utils.rs
docs/: METRICS.md
examples/prometheus-grafana/: docker-compose.yml
examples/prometheus-grafana/grafana/provisioning/dashboards/: bpfmeter.yaml  default.json
examples/prometheus-grafana/prometheus/: prometheus.yml
install/kubernetes/: README.md  bpfmeter-agent.yaml
