[package]
name = "bpfmeter"
version = "0.1.0"
edition = "2024"
publish = ["rust-craft"]

[dependencies]
aya = "0.13"
aya-obj = "0.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
fern = "0.7"
humantime = "2.3"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
clap = { version = "4.5", features = ["derive"] }
plotters = {version="0.3", optional = true}
axum = "0.8"
prometheus-client = "0.24"
libc = "0.2"
num-traits = "0.2.19"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }
which = "8.0.0"
ctor = "0.6.1"

[features]
default = ["draw"]
draw = ["dep:plotters"]

